--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               </div>
             </div>
           </div>
-          <button class="profile__add-button"></button>
+          <button type="button" class="profile__add-button"></button>
         </section>
         <section class="pop-up pop-up_visability">
           <div class="pop-up__box">
@@ -47,42 +47,42 @@
               <img src="./images/karachaevsk.jpg" alt="карачаевск" class="gallery__photo">
               <div class="gallery__place-subscription">
                 <h2 class="gallery__place-name">Карачаевск</h2>
-                <button class="gallery__place-like"></button>
+                <button type="button" class="gallery__place-like"></button>
               </div>
             </li>
             <li class="gallery__place">
               <img src="./images/elbrus.jpg" alt="эльбрус" class="gallery__photo">
               <div class="gallery__place-subscription">
                 <h2 class="gallery__place-name">Гора Эльбрус</h2>
-                <button class="gallery__place-like"></button>
+                <button type="button" class="gallery__place-like"></button>
               </div>
             </li>
             <li class="gallery__place">
               <img src="./images/dombai.jpg" alt="домбай" class="gallery__photo">
               <div class="gallery__place-subscription">
                 <h2 class="gallery__place-name">Домбай</h2>
-                <button class="gallery__place-like"></button>
+                <button type="button" class="gallery__place-like"></button>
               </div>
             </li>
             <li class="gallery__place">
               <img src="./images/elbrus.jpg" alt="эльбрус" class="gallery__photo">
               <div class="gallery__place-subscription">
                 <h2 class="gallery__place-name">Гора Эльбрус</h2>
-                <button class="gallery__place-like"></button>
+                <button type="button" class="gallery__place-like"></button>
               </div>
             </li>
             <li class="gallery__place">
               <img src="./images/dombai.jpg" alt="домбай" class="gallery__photo">
               <div class="gallery__place-subscription">
                 <h2 class="gallery__place-name">Домбай</h2>
-                <button class="gallery__place-like"></button>
+                <button type="button" class="gallery__place-like"></button>
               </div>
             </li>
             <li class="gallery__place">
               <img src="./images/karachaevsk.jpg" alt="карачаевск" class="gallery__photo">
               <div class="gallery__place-subscription">
                 <h2 class="gallery__place-name">Карачаево-Черкесия</h2>
-                <button class="gallery__place-like"></button>
+                <button type="button" class="gallery__place-like"></button>
               </div>
             </li>
           </ul>
