--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <template id="place">
       <li class="gallery__place">
         <img src="./images/remove.svg" alt="удалить" class="gallery__place-remove">
-        <img src="" alt="фото" class="gallery__photo">
+        <img src="#" alt="фото" class="gallery__photo">
         <div class="gallery__place-subscription">
           <h2 class="gallery__place-name"></h2>
           <button type="button" class="gallery__place-like"></button>
