--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <section class="gallery">
           <ul class="gallery__table"></ul>
         </section>
-        <section class="photo-pop-up pop-up_visability">
+        <section class="photo-pop-up photo-pop-up_visability">
           <div class="photo-pop-up__box">
             <img src="#" alt="фото" class="photo-pop-up__image">
             <h3 class="photo-pop-up__description"></h3>
-            <button type="button" class="pop-up__close-button  pop-up__close-button_photo">
-              <img src="./images/close.svg" alt="закрыть" class="pop-up__close-icon">
+            <button type="button" class="photo-pop-up__close-button">
+              <img src="./images/close.svg" alt="закрыть" class="photo-pop-up__close-icon">
             </button>
           </div>
           <div class="photo-pop-up__overlay"></div>
