--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <div class="profile__text">
               <div class="profile__upper-line">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
-                <button type="button" class="profile__edit-button"></button>
+                <button type="button" class="profile__edit-button open-button"></button>
               </div>
               <p class="profile__description">Исследователь океана</p>
             </div>
           </div>
-          <button type="button" class="profile__add-button"></button>
+          <button type="button" class="profile__add-button open-button"></button>
         </section>
         <section class="pop-up pop-up_edit-profile pop-up_visability">
           <div class="pop-up__box">
@@ -56,12 +56,12 @@
         <section class="gallery">
           <ul class="gallery__table"></ul>
         </section>
-        <section class="photo-pop-up photo-pop-up_visability">
+        <section class="pop-up photo-pop-up pop-up_visability">
           <div class="photo-pop-up__box">
             <img src="#" alt="фото" class="photo-pop-up__image">
             <h3 class="photo-pop-up__description"></h3>
-            <button type="button" class="photo-pop-up__close-button">
-              <img src="./images/close.svg" alt="закрыть" class="photo-pop-up__close-icon">
+            <button type="button" class="photo-pop-up__close-button pop-up__close-button pop-up__close-button_photo">
+              <img src="./images/close.svg" alt="закрыть" class="photo-pop-up__close-icon pop-up__close-icon">
             </button>
           </div>
           <div class="photo-pop-up__overlay"></div>
@@ -74,7 +74,7 @@
     <template id="place">
       <li class="gallery__place">
         <img src="./images/remove.svg" alt="удалить" class="gallery__place-remove">
-        <img src="#" alt="фото" class="gallery__photo">
+        <img src="#" alt="фото" class="gallery__photo open-button">
         <div class="gallery__place-subscription">
           <h2 class="gallery__place-name"></h2>
           <button type="button" class="gallery__place-like"></button>
