--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <section class="pop-up pop-up_edit-profile pop-up_visability">
           <div class="pop-up__box">
             <h2 class="pop-up__heading">Редактировать профиль</h2>
-            <form name="edit-form" class="pop-up__form pop-up__form_type_edit">
-              <input type="text" name="name" class="pop-up__input pop-up__input_type_name" placeholder="Жак-Ив Кусто">
-              <input type="text" name="description" class="pop-up__input pop-up__input_type_description" placeholder="Исследователь океана">
+            <form name="edit-form" class="pop-up__form pop-up__form_type_edit" novalidate>
+              <input type="text" name="name" class="pop-up__input pop-up__input_type_name" placeholder="Жак-Ив Кусто" required minlength="2" maxlength="40">
+              <span class="pop-up__input-error name-error"></span>
+              <input type="text" name="description" class="pop-up__input pop-up__input_type_description" placeholder="Исследователь океана" required minlength="2" maxlength="200">
+              <span class="pop-up__input-error description-error"></span>
               <button type="submit" class="pop-up__save-button">Сохранить</button>
              </form>
             <button type="button" class="pop-up__close-button pop-up__close-button_edit">
@@ -42,9 +44,11 @@
         <section class="pop-up pop-up_add-place pop-up_visability">
           <div class="pop-up__box">
             <h2 class="pop-up__heading">Новое место</h2>
-            <form name="add-form" class="pop-up__form pop-up__form_type_add">
-              <input type="text" name="place-name" class="pop-up__input pop-up__input_type_place-name" placeholder="Название">
-              <input type="text" name="place-image" class="pop-up__input pop-up__input_type_place-image" placeholder="Ссылка на картинку">
+            <form name="add-form" class="pop-up__form pop-up__form_type_add" novalidate>
+              <input type="text" name="place-name" class="pop-up__input pop-up__input_type_place-name" placeholder="Название" required minlength="2" maxlength="30">
+              <span class="pop-up__input-error place-name-error"></span>
+              <input type="url" name="place-image" class="pop-up__input pop-up__input_type_place-image" placeholder="Ссылка на картинку" required>
+              <span class="pop-up__input-error place-image-error"></span>
               <button type="submit" class="pop-up__save-button">Создать</button>
              </form>
             <button type="button" class="pop-up__close-button  pop-up__close-button_add">
@@ -64,7 +68,7 @@
               <img src="./images/close.svg" alt="закрыть" class="photo-pop-up__close-icon pop-up__close-icon">
             </button>
           </div>
-          <div class="photo-pop-up__overlay"></div>
+          <div class="pop-up__overlay photo-pop-up__overlay"></div>
         </section>
       </main>
       <footer class="footer">
@@ -81,6 +85,7 @@
         </div>
       </li>
     </template>
+    <script src="./script/validation.js"></script>
     <script src="./script/script.js"></script>
   </body>
 </html>
