--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
       </footer>
     </div>
     <template id="place">
-      <li class="gallery__place">
-        <img src="./images/remove.svg" alt="удалить" class="gallery__place-remove">
-        <img src="#" alt="фото" class="gallery__photo open-button">
-        <div class="gallery__place-subscription">
-          <h2 class="gallery__place-name"></h2>
-          <button type="button" class="gallery__place-like"></button>
+      <li class="place">
+        <img src="./images/remove.svg" alt="удалить" class="place__remove">
+        <img src="#" alt="фото" class="place__photo open-button">
+        <div class="place__subscription">
+          <h2 class="place__name"></h2>
+          <button type="button" class="place__like"></button>
         </div>
       </li>
     </template>
