--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
         </div>
       </li>
     </template>
-    <script src="./script/validation.js"></script>
-    <script src="./script/script.js"></script>
+    <script type="module" src="./script/script.js"></script>
   </body>
 </html>
