PW 9, 1st revue

--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
     </div>
     <template id="place">
       <li class="place">
-        <img src="<%=require('./images/remove.svg')%>" alt="удалить" class="place__remove" hidden>
+        <img src="<%=require('./images/remove.svg')%>" alt="удалить" class="place__remove place__remove_hidden">
         <img src="#" alt="фото" class="place__photo open-button">
         <div class="place__subscription">
           <h2 class="place__name"></h2>
